fixed stuck swipe

--- a/DuoTax/styles.css
+++ b/DuoTax/styles.css
@@ -47,6 +47,7 @@ body * { text-align: center; } /* percolate to child elements */
     overflow: hidden;
     padding: 0px;
     box-sizing: border-box;
+    transition: transform 0.1s ease-out, opacity 0.1s ease-out;
 }
 
 .image-pair, .name-pair {
@@ -141,7 +142,7 @@ body * { text-align: center; } /* percolate to child elements */
 }
 
 /* for swipe on top image */
-@keyframes swipeOutLeft {
+/*@keyframes swipeOutLeft {
     to {
         transform: rotate(-5deg) translateX(-100%);
         opacity: 0;
@@ -149,6 +150,16 @@ body * { text-align: center; } /* percolate to child elements */
 }
 .swiping-left .image-container { transition: transform 0.1s ease-out, opacity 0.1s ease-out; }
 .swipe-out-left .image-container { animation: swipeOutLeft 0.5s ease-out forwards; }
+
+*/
+.swipe-out-left { animation: swipeOutLeft 0.5s ease-out forwards; }
+
+@keyframes swipeOutLeft {
+    to {
+        transform: rotate(-5deg) translateX(-100%);
+        opacity: 0;
+    }
+}
 
 #overlay {
     position: absolute;
